src/app-groups/ssp/apps/backend/templates/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "api-ssp-placeholder.balazskrizsan.com"
      secretName: env-cert
  rules:
    - host: "api-ssp-placeholder.balazskrizsan.com"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: backend
                port:
                  number: 1111
